[01.06] 정리 링크 추가

--- a/1주차.md
+++ b/1주차.md
@@ -98,3 +98,16 @@
         <p>A) 사용자가 이상한 프로그램하지 않도록 막아주는 것도 운영체제의 몫이다. 따라서 커널모드에서만 직접적으로 하드웨어 제어 가능하며 유저모드에서 시스템콜을 할 시에만 커널모드로 넘어갈 수 있다. </p>
     </details>
 
+
+
+
+
+
+
+
+
+
+
+## 각자 정리한 부분
+
+* 수민 : https://sustco.tistory.com/32
