--- a/2주차.md
+++ b/2주차.md
@@ -70,5 +70,5 @@
         linux 시스템에서는 fork() 명령어로 프로세스를 생성, clone() 명령어로 스레드를 생성할 수 있다.
     </details>
    
-   조금 더 자세한 설명이 필요하시면 https://www.notion.so/Week2-1de0cc8d256a45a6b642535b3bf3e649
+   조금 더 자세한 설명이 필요하시면 [https://www.notion.so/Week2-1de0cc8d256a45a6b642535b3bf3e649](https://spot-visitor-fff.notion.site/Week2-1de0cc8d256a45a6b642535b3bf3e649)
    
