[01.15] 정리 링크 추가

--- a/2주차.md
+++ b/2주차.md
@@ -69,6 +69,11 @@
         그래서 프로세스이지만 상대적으로 가볍기 때문에 필요한 작업만을 처리할 수 있어서 `가벼운 프로세스`라고 부르기도 한다.
         linux 시스템에서는 fork() 명령어로 프로세스를 생성, clone() 명령어로 스레드를 생성할 수 있다.
     </details>
-   
+
    조금 더 자세한 설명이 필요하시면 [https://www.notion.so/Week2-1de0cc8d256a45a6b642535b3bf3e649](https://spot-visitor-fff.notion.site/Week2-1de0cc8d256a45a6b642535b3bf3e649)
-   
+
+
+
+## 각자 정리한 부분
+
+* 수민 : https://sustco.tistory.com/33 (비밀번호 : 1234)
