[01.20] 3주차 정리한 부분 추가

--- a/3주차.md
+++ b/3주차.md
@@ -62,9 +62,11 @@
       커널은 내부적으로 각각의 시스템콜을 구분하기 위해 기능별로 고유번호를 할당해놓는다.
   </details>
 
-  ------
 
-  
+
+------
+
+
 
 1. osi 7계층이란? 
 
@@ -164,3 +166,11 @@
     <details>
         <summary>답변보기</summary>
     </details>
+
+
+
+
+
+## 각자 정리한 부분
+
+수민 : https://sustco.tistory.com/34 (비밀번호 : 1234)
