--- a/3주차.md
+++ b/3주차.md
@@ -10,6 +10,9 @@
 
    <details>
        <summary>답변보기</summary>
+         하드웨어 인터럽트는 키보드나 네트워크 카드와 같은 물리적 장치에 의해 발생한다.
+         소프트웨어 인터럽트는 시스템 호출과 같은 소프트웨어 이벤트에 의해 발생하며,
+         하드웨어 인터럽트는 CPU의 인터럽트 컨트롤러에 의해, 소프트웨어 인터럽트는 운영체제에 의해 처리된다.
    </details>
 
 3. 하드웨어 인터럽트의 종류 2가지를 말하고 특징을 말하시오.
@@ -26,6 +29,7 @@
 
    <details>
        <summary>답변보기</summary>
+        ISR(Interrupt Service Routine)은 인터럽트가 발생할 때 CPU가 실행하는 루틴입니다. 인터럽트를 일으킨 이벤트를 처리하고 이전 프로그램으로 제어 권한을 되돌리는 역할을 합니다.
    </details>
 
 5. 폴링방식에 대해서 말하고 인터럽트와의 차이점을 말하시오.
@@ -47,12 +51,18 @@
 
    <details>
        <summary>답변보기</summary>
+         프로그램이 시스템 콜을 할 때 CPU가 사용자 모드에서 커널모드로 전환하여, 프로그램이 운영체제의 커널에 접근하여 원하는 서비스를 요청 할 수 있다.
+         ```
+         x86 아키텍처에서 시스템 호출은 시스템 호출 번호를 인수로 하여 명령어 'syscall' 또는 'int'를 실행함으로써 이루어진다. 그런 다음 커널은 해당 시스템 호출 핸들러 기능          을 실행하기 시작합니다. ARM 아키텍처는 소프트웨어 인터럽트를 사용하여 커널 모드로 전환한다.
+         ```
    </details>
 
 8. 인터럽트 vs 시스템콜
 
    <details>
        <summary>답변보기</summary>
+         인터럽트는 외부 이벤트에 의해 발생하고 CPU에 의해 처리되는 반면에 시스템 콜은 프로그램에 의해 시작되고 운영 체제에 의해 처리된다.
+         인터럽트는 외부 이벤트를 처리하고 입출력 작업을 수행하는 데 사용되며, 시스템 호출은 운영 체제 서비스와 리소스에 액세스하는 데 사용됩니다.
    </details>
 
 9. 서로 다른 시스템 콜은 어떻게 구분할 수 있는가?
@@ -174,3 +184,4 @@
 ## 각자 정리한 부분
 
 수민 : https://sustco.tistory.com/34 (비밀번호 : 1234)
+준엽 : https://www.notion.so/Week3-OSI-7-05c980c3ce2f46469319b52f817d45c1
