--- a/3주차.md
+++ b/3주차.md
@@ -175,6 +175,14 @@
 
     <details>
         <summary>답변보기</summary>
+         1. physical layer 에서 전기적인 데이터를 수신한다.
+         2. Data-Link layer에서 프레임에 부여한 주소(MAC)를 해석하고, 에러/재전송/흐름제어 등을 체크한다.<br>
+         3. network latyer에서는 전송받은 목적지 IP주소가 맞는지를 체크한다. 또한 데이터가 너무 빨리 전송되었거나 수신되지 않도록 흐름을 제어한다.<br>
+         4. Transport layer에서 전달받은 포트 번호를 통해 어느 어플리케이션에 데이터를 전달해야하는지를 체크하거나, 데이터가 올바른 순서로 수신되었는지 확인 한다.<br>
+         5. Session layer에서는 장치간의 연결 세션을 설정하고 시간초과, 오류등을 체크한다.<br>
+         6. Presentation layer에서는 데이터를 애플리케이션 계층에 전달하기 위해 암호화 된 데이터를 해석하거나, 압축한 데이터를 압축해제하는 등 데이터를 해석하는 역할을 수행한다.<br>
+         7. Application Layer에서 해당 프로토콜의 종류를 해석하고 해당 프로토콜에 맞는 해석방법을 통해 데이터를 해석하거나, 인증 및 권한 부여 문제도 해결한다.
+     
     </details>
 
 
@@ -183,5 +191,5 @@
 
 ## 각자 정리한 부분
 
-수민 : https://sustco.tistory.com/34 (비밀번호 : 1234)
+수민 : https://sustco.tistory.com/34 (비밀번호 : 1234)<br>
 준엽 : https://www.notion.so/Week3-OSI-7-05c980c3ce2f46469319b52f817d45c1
