--- a/4주차.md
+++ b/4주차.md
@@ -1,3 +1,5 @@
+## 조원형
+
 1. 인터럽트란?
 
    <details>
@@ -68,14 +70,13 @@
 9. 서로 다른 시스템 콜은 어떻게 구분할 수 있는가?
 
   <details>
-      <summary>답변보기</summary>
-      커널은 내부적으로 각각의 시스템콜을 구분하기 위해 기능별로 고유번호를 할당해놓는다.
-  </details>
+       <summary>답변보기</summary>
+         인터럽트는 외부 이벤트에 의해 발생하고 CPU에 의해 처리되는 반면에 시스템 콜은 프로그램에 의해 시작되고 운영 체제에 의해 처리된다.
+         인터럽트는 외부 이벤트를 처리하고 입출력 작업을 수행하는 데 사용되며, 시스템 호출은 운영 체제 서비스와 리소스에 액세스하는 데 사용됩니다.
+   </details>
 
 
-
-------
-
+## 박세정
 
 
 1. osi 7계층이란? 
@@ -191,5 +192,4 @@
 
 ## 각자 정리한 부분
 
-수민 : https://sustco.tistory.com/34 (비밀번호 : 1234)<br>
-준엽 : https://www.notion.so/Week3-OSI-7-05c980c3ce2f46469319b52f817d45c1
+
