--- a/4주차.md
+++ b/4주차.md
@@ -1,11 +1,11 @@
 ## 조원형
 
-1. 인터럽트란?
+1. Context switching이 무엇인지 설명하세요.
 
    <details>
        <summary>답변보기</summary>
        A1) 프로그램을 실행하는 도중에 예기치 않은 상황이 발생할 경우 현재 실행 중인 작업을 즉시 중단하고, 발생된 상황에 대한 우선 처리가 필요함을 CPU에게 알리는 것<br>
-   A2) 시스템에서 발생한 다양한 종류의 이벤트 혹은 그런 이벤트를 알리는 메커니즘
+       A2) 시스템에서 발생한 다양한 종류의 이벤트 혹은 그런 이벤트를 알리는 메커니즘
    </details>
 
 2. 하드웨어 인터럽트와 소프트웨어 인터럽트에 대해 설명하시오.
