--- a/3주차.md
+++ b/3주차.md
@@ -104,10 +104,7 @@
    <details>
        <summary>답변보기</summary>
        데이터를 목적지까지 가장 안전하고 빠르게 전달하는 기능을 담당한다.
-   
-   라우터를 통해 이동할 경로를 선택하여 IP 주소를 지정하고, 해당 경로에 따라 패킷을 전달해준다.
-   
-   라우팅, 흐름 제어, 오류 제어, 세그먼테이션 등을 수행한다.
+       라우터를 통해 이동할 경로를 선택하여 IP 주소를 지정하고, 해당 경로에 따라 패킷을 전달해준다.라우팅, 흐름 제어, 오류 제어, 세그먼테이션 등을 수행한다.
    </details>
 
 5. 데이터 링크 레이어와 트렌스포트 레이어 모두 오류제어기능을 제공한다. 두 오류제어 기능의 차이는?
