[01.27] 4주차 정리한 부분 추가

--- a/4주차.md
+++ b/4주차.md
@@ -182,8 +182,7 @@
          4. Transport layer에서 전달받은 포트 번호를 통해 어느 어플리케이션에 데이터를 전달해야하는지를 체크하거나, 데이터가 올바른 순서로 수신되었는지 확인 한다.<br>
          5. Session layer에서는 장치간의 연결 세션을 설정하고 시간초과, 오류등을 체크한다.<br>
          6. Presentation layer에서는 데이터를 애플리케이션 계층에 전달하기 위해 암호화 된 데이터를 해석하거나, 압축한 데이터를 압축해제하는 등 데이터를 해석하는 역할을 수행한다.<br>
-         7. Application Layer에서 해당 프로토콜의 종류를 해석하고 해당 프로토콜에 맞는 해석방법을 통해 데이터를 해석하거나, 인증 및 권한 부여 문제도 해결한다.
-     
+         7. Application Layer에서 해당 프로토콜의 종류를 해석하고 해당 프로토콜에 맞는 해석방법을 통해 데이터를 해석하거나, 인증 및 권한 부여 문제도 해결한다.</details>
     </details>
 
 
@@ -192,4 +191,4 @@
 
 ## 각자 정리한 부분
 
-
+수민 : https://sustco.tistory.com/35  (비밀번호 : 1234)
