--- a/4주차.md
+++ b/4주차.md
@@ -1,81 +1,146 @@
 ## 조원형
 
-1. Context switching이 무엇인지 설명하세요.
+1. Context switching이 무엇인지 설명하세요 <br> 
+  -> 언제 발생하는가? <br> 
+  -> PCB란 무엇이고, 어떤 방식으로 관리되는가?
 
    <details>
        <summary>답변보기</summary>
-       A1) 프로그램을 실행하는 도중에 예기치 않은 상황이 발생할 경우 현재 실행 중인 작업을 즉시 중단하고, 발생된 상황에 대한 우선 처리가 필요함을 CPU에게 알리는 것<br>
-       A2) 시스템에서 발생한 다양한 종류의 이벤트 혹은 그런 이벤트를 알리는 메커니즘
+       Q) Context switching이 무엇인지 설명하세요 
+       <br>
+       A) CPU가 이전의 프로세스 상태를 PCB에 보관하고, 또 다른 프로세스의 정보를 PCB에 읽어 레지스터에 적재하는 과정
+       <br>
+       <br>
+       Q) 언제 발생하는가?
+       <br>
+       A) 주어진 time slice를 다 사용했거나, IO 작업을 해야하거나, 다른 리소스를 기다려야 하거나
+       <br>
+       <br>
+       Q) PCB란 무엇이고, 어떤 방식으로 관리가 되는가?
+       <br>
+       A) 프로세스 메타데이터들을 저장해 놓는 곳, 한 PCB 안에는 한 프로세스의 정보가 담김. Linked list 방식으로 관리
    </details>
 
-2. 하드웨어 인터럽트와 소프트웨어 인터럽트에 대해 설명하시오.
+2. Context switching의 종류가 무엇이 있는가? <br>
+   -> 두 개중에 뭐가 더 빠를까? <br>
+   -> 스레드 컨텍스트 스위칭이 더 빠른 이유는 무엇인가?
 
    <details>
        <summary>답변보기</summary>
-         하드웨어 인터럽트는 키보드나 네트워크 카드와 같은 물리적 장치에 의해 발생한다.
-         소프트웨어 인터럽트는 시스템 호출과 같은 소프트웨어 이벤트에 의해 발생하며,
-         하드웨어 인터럽트는 CPU의 인터럽트 컨트롤러에 의해, 소프트웨어 인터럽트는 운영체제에 의해 처리된다.
+        Q) Context switching의 종류가 무엇이 있는가? 
+       <br>
+       A) 스레드 컨텍스트 스위칭, 프로세스 컨텍스트 스위칭
+       <br>
+       <br>
+       Q) 스레드 컨텍스트 스위칭이 더 빠른 이유는?
+       <br>
+       A1) 쓰레드는 공유하는 영역이 많기 때문에 컨텍스트 스위칭이 빠르다. <br>
+       A2) 프로세스 컨텍스트 스위칭이 일어났을 경우, 공유하는 데이터가 없으므로 캐쉬가 지금껏 쌓아 놓은 데이터들이 무너지고 새로 캐쉬정보를 쌓아야 한다. 이것이 프로세스 컨텍스트 스위칭에 부담이 되는 요소이다. <br> 반면, 쓰레드라면 저장된 캐쉬 데이터는 쓰레드가 바뀌어도 공유하는 데이터가 있으므로 의미있다. 그러므로 컨텍스트 스위칭이 빠른 것이다.
    </details>
 
-3. 하드웨어 인터럽트의 종류 2가지를 말하고 특징을 말하시오.
+3. Context switching이 미치는 간접적인 영향에 대해 알고 있는가?
+   <details>
+       <summary>답변보기</summary>
+       캐시 오염 <br>
+   
+       <https://youtu.be/Xh9Nt7y07FE>
+   </details>
+
+4. Interrupt 과정을 PCB와 함께 설명하시오.
 
    <details>
        <summary>답변보기</summary>
-       하드웨어 인터럽트는 I/O장비에서 아무때나 전달되어 오는 신호로 Maskable 인터럽트와 NMI(non-maskable interrupt) 가 존재<br>
-   전자는 interrupt mask가 가능하며(인터럽트가 발생하였을 때 요구를 받아들일지 말지 지정하는것) 그렇기에 무시가 가능하다.
-   입출력장치가 제기하는 인터럽트 요청과 거의 대부분의 인터럽트가 여기에 해당한다. <br>
-   후자는 무시될 수 없는 인터럽트로 몇몇 심각한 사건(정전, 하드웨어 고장 등 어쩔수없는 오류) 등이 해당
+      1. 입출력 장치는 CPU에 인터럽트 요청 신호를 보낸다. <br>
+      2. CPU는 실행 사이클이 끝나고 명령어를 인출하기 전 항상 인터럽트 여부를 확인한다. <br>
+      3. CPU는 인터럽트 요청을 확인하고 인터럽트 플래그를 통해 현재 인터럽트를 받아들일 수 있는지 여부를 확인한다. <br>
+      4. 인터럽트를 받아들일 수 있다면 CPU는 지금까지의 작업을 PCB에 백업한다. <br>
+      5. CPU는 인터럽트 벡터를 참조하여 인터럽트 서비스 루틴을 실행한다. <br>
+      6. 인터럽트 서비스 루틴 실행이 끝나면 4번에서 백업해 둔 작업을 복구하여 실행을 재개한다.
    </details>
 
-4. ISR이란?
+6. IPC란 무엇인가? 
 
    <details>
        <summary>답변보기</summary>
-        ISR(Interrupt Service Routine)은 인터럽트가 발생할 때 CPU가 실행하는 루틴입니다. 인터럽트를 일으킨 이벤트를 처리하고 이전 프로그램으로 제어 권한을 되돌리는 역할을 합니다.
+       프로세스의 통신을 위한 것
    </details>
 
-5. 폴링방식에 대해서 말하고 인터럽트와의 차이점을 말하시오.
+7. IPC 통신중에서 가장 빠르게 접근 가능한 통신 방법은 무엇인가?
 
    <details>
        <summary>답변보기</summary>
-       폴링방식은 사용자가 명령어를 사용해 입력 핀의 값을 계속 읽어 변화를 알아내는 방식이다. (CPU가 주변 입출력 장치들(키보드, 센서, LCD 등)에서의 변화를 지속적으로 계속 확인하고 그에 따라 프로그램을 처리하는 방식)<br>
-       폴링방식은 인터럽트 방식에 비해 입출력 장치들과의 상호작용을 많이 할 수록 CPU를 점유하는 시간이 증가하기 때문에 성능이 크게 떨어진다. 또한 한 루프를 다 돌아야지만 상태 변화를 확인 할 수 있다.하지만 인터럽트 방식은 요청이 들어올때만 처리하기 때문에 CPU효율이 떨어지지 않으며 입출력 장치에서의 요청이 발생하는 정확한 타이밍을 알 수 있기 때문에 즉각 반응할 수 있다.
+         공뮤 메모리 방식. 중개자 없이 곧바로 메모리에 접근할 수 있기 때문에 가장 빠르다.
    </details>
 
-6. 시스템콜이란 무엇인가? 
+8. Full duplex vs half duplex <br>
+   -> IPC 종류 중에 익명 PIPE가 Half duplex이라고도 불리는데, 그렇다면 이 방식으로 Full duplex를 어떻게 구현하면 되겠는가?
 
    <details>
        <summary>답변보기</summary>
-       시스템콜이란 OS에 인터페이스하기 위한 방법으로 프로그램이 OS커널이 제공하는 서비스를 이용하고 싶을 때 시스템콜을 통해 실행한다. 
+       Q) Full duplex vs Half duplex <br>
+       A) Full duplex는 전이중 통신, Half duplex는 반이중 통신
+       <br>
+       <br>
+       Q) IPC 종류 중에 익명 PIPE가 반이중 통신이라고도 불리는데, 그렇다면 이방식으로 Full duplex를 어떻게 구현하면 되겠는가? <br>
+       A) 2개의 파이프를 구성하여 구현한다.
    </details>
 
-7. 시스템콜의 작동방식은?
+9. 소켓이란?
 
    <details>
        <summary>답변보기</summary>
-         프로그램이 시스템 콜을 할 때 CPU가 사용자 모드에서 커널모드로 전환하여, 프로그램이 운영체제의 커널에 접근하여 원하는 서비스를 요청 할 수 있다.
-         ```
-         x86 아키텍처에서 시스템 호출은 시스템 호출 번호를 인수로 하여 명령어 'syscall' 또는 'int'를 실행함으로써 이루어진다. 그런 다음 커널은 해당 시스템 호출 핸들러 기능          을 실행하기 시작합니다. ARM 아키텍처는 소프트웨어 인터럽트를 사용하여 커널 모드로 전환한다.
-         ```
+       소켓은 두 응용 프로그램을 연결하는데 사용된다. 연결의 끝점을 소켓이라고 한다.
    </details>
 
-8. 인터럽트 vs 시스템콜
+10. 소켓 vs 웹소켓
 
    <details>
        <summary>답변보기</summary>
-         인터럽트는 외부 이벤트에 의해 발생하고 CPU에 의해 처리되는 반면에 시스템 콜은 프로그램에 의해 시작되고 운영 체제에 의해 처리된다.
-         인터럽트는 외부 이벤트를 처리하고 입출력 작업을 수행하는 데 사용되며, 시스템 호출은 운영 체제 서비스와 리소스에 액세스하는 데 사용됩니다.
+       웹 소켓은 TCP 소켓과 구분되는 것이 아니라 소켓의 추상화된 형태이다.
+      https://gusrb3164.github.io/web/2021/10/28/websocket-socket/
    </details>
+   
+11. Http vs 소켓
 
-9. 서로 다른 시스템 콜은 어떻게 구분할 수 있는가?
-
-  <details>
+   <details>
        <summary>답변보기</summary>
-         인터럽트는 외부 이벤트에 의해 발생하고 CPU에 의해 처리되는 반면에 시스템 콜은 프로그램에 의해 시작되고 운영 체제에 의해 처리된다.
-         인터럽트는 외부 이벤트를 처리하고 입출력 작업을 수행하는 데 사용되며, 시스템 호출은 운영 체제 서비스와 리소스에 액세스하는 데 사용됩니다.
+       Http : 단방향 통신
+       <br>
+       Socket : 양방향 통신. Server와 Client가 특정 Port를 통해 연결을 유지하고 있어 실시간으로 양방향 통신을 할 수 있는 방식
    </details>
 
 
+12. TCP vs UDP
+
+   <details>
+       <summary>답변보기</summary>
+       - TCP <br>
+       연결형 서비스로 3-way handshaking 과정을 통해 연결을 설정하기 때문에 높은 신뢰성을 보장하지만, 속도가 비교적 느리다는 단점이 있다.
+      <br>
+      - UDP <br>
+      비연결형 서비스로 3-way handshaking을 사용하지 않기 때문에 신뢰성이 떨어지는 단점이 있지만, 데이터 수신 여부를 확인하지 않기 때문에 속도가 빠르다는 장점이 있다.
+   </details>
+
+13. 3-way handshaking 과정을 설명하세요.
+
+   <details>
+       <summary>답변보기</summary>
+       1. 클라이언트가 서버에게 SYN 패킷을 보냄 <br>
+      2. 서버가 SYN을 받고, 클라이언트로 받았다는 신호인 ACK와 SYN 패킷을 보냄 <br>
+      3. 클라이언트는 서버의 응답은 ACK와 SYN 패킷을 받고, ACK를 서버로 보냄
+   </details>   
+
+14. TCP통신 종료시에도 3-way handshaking을 사용하는가? 아니면 어떤 과정을 거치며 그 과정을 설명하세요.
+  
+   <details>
+       <summary>답변보기</summary>
+       4-way handshaking을 사용한다. 4-way handshaking은 다음 과정을 거친다. <br><br>
+      1. 클라이언트는 서버에게 연결을 종료한다는 FIN 플래그를 보낸다. <br>
+      2. 서버는 FIN을 받고, 확인했다는 ACK를 클라이언트에게 보낸다. (이때 모든 데이터를 보내기 위해 CLOSE_WAIT 상태가 된다)<br>
+      3. 데이터를 모두 보냈다면, 연결이 종료되었다는 FIN 플래그를 클라이언트에게 보낸다.<br>
+      4. 클라이언트는 FIN을 받고, 확인했다는 ACK를 서버에게 보낸다. (아직 서버로부터 받지 못한 데이터가 있을 수 있으므로 TIME_WAIT을 통해 기다린다.)
+   </details>
+   
 ## 박세정
 
 
@@ -191,4 +256,6 @@
 
 ## 각자 정리한 부분
 
-수민 : https://sustco.tistory.com/35  (비밀번호 : 1234)
+### 조원형
+
+PCB & Context switching : https://meadow-butter-70e.notion.site/PCB-Context-Switching-bbf0bf5c751e45169caa03fda0c1c5b1
