--- a/4주차.md
+++ b/4주차.md
@@ -259,3 +259,7 @@
 ### 조원형
 
 PCB & Context switching : https://meadow-butter-70e.notion.site/PCB-Context-Switching-bbf0bf5c751e45169caa03fda0c1c5b1
+<br><br>
+IPC : https://meadow-butter-70e.notion.site/IPC-4232bd00eb7c4b1cbb4b0a8ba397a373
+<br><br>
+[TCP] 3 way handshaking & 4 way handshaking : https://meadow-butter-70e.notion.site/TCP-3-way-handshake-4-way-handshake-ab9ae704495941bd83983f5b78008ed1
