--- a/4주차.md
+++ b/4주차.md
@@ -1,4 +1,3 @@
-## 조원형
 
 1. Context switching이 무엇인지 설명하세요 <br> 
   -> 언제 발생하는가? <br> 
@@ -58,12 +57,17 @@
       6. 인터럽트 서비스 루틴 실행이 끝나면 4번에서 백업해 둔 작업을 복구하여 실행을 재개한다.
    </details>
 
-6. IPC란 무엇인가? 
+5. IPC란 무엇인가? 
 
    <details>
        <summary>답변보기</summary>
        프로세스의 통신을 위한 것
    </details>
+
+6. IPC 통신을 서버와 클라이언트 관계에 빗대어 설명
+
+
+
 
 7. IPC 통신중에서 가장 빠르게 접근 가능한 통신 방법은 무엇인가?
 
@@ -72,7 +76,19 @@
          공뮤 메모리 방식. 중개자 없이 곧바로 메모리에 접근할 수 있기 때문에 가장 빠르다.
    </details>
 
-8. Full duplex vs half duplex <br>
+
+8. 스레드 간 통신과 프로세스 간의 통신 중에서 뭐가 더 어려울끼?
+
+    <detail>
+       <summary>답변보기</summary>
+         프로세스 간 통신
+
+         프로세스는 통신할 수 있는 공간이 없기 때문에, 통신을 위한 별도의 공간을 만들어 주어야 하기 때문
+         프로세스는 생성되면서, PC를 포함한 메모리 공간 등을 복사하여, 별도의 자원을 할당하지만, 스레드는 메모리 공간과 자원을 공유한다.
+    </detail>
+
+
+9. Full duplex vs half duplex <br>
    -> IPC 종류 중에 익명 PIPE가 Half duplex이라고도 불리는데, 그렇다면 이 방식으로 Full duplex를 어떻게 구현하면 되겠는가?
 
    <details>
@@ -85,14 +101,23 @@
        A) 2개의 파이프를 구성하여 구현한다.
    </details>
 
-9. 소켓이란?
+10. 소켓이란?
 
    <details>
        <summary>답변보기</summary>
        소켓은 두 응용 프로그램을 연결하는데 사용된다. 연결의 끝점을 소켓이라고 한다.
    </details>
 
-10. 소켓 vs 웹소켓
+
+11. 같은 컴퓨터에 있는 프로세스 간 통신에는 소켓을 거의 사용하지 않는다. 왜 사용하지 않는지?
+
+   <details>
+       <summary>답변보기</summary>
+       소켓을 사용하려면 많은 전처리를 해야하기 때문에 다른 프로세스 간 통신방법보다 느리다.
+   </details>
+
+
+12. 소켓 vs 웹소켓
 
    <details>
        <summary>답변보기</summary>
@@ -100,7 +125,7 @@
       https://gusrb3164.github.io/web/2021/10/28/websocket-socket/
    </details>
    
-11. Http vs 소켓
+13. Http vs 소켓
 
    <details>
        <summary>답변보기</summary>
@@ -110,7 +135,7 @@
    </details>
 
 
-12. TCP vs UDP
+14. TCP vs UDP
 
    <details>
        <summary>답변보기</summary>
@@ -121,7 +146,7 @@
       비연결형 서비스로 3-way handshaking을 사용하지 않기 때문에 신뢰성이 떨어지는 단점이 있지만, 데이터 수신 여부를 확인하지 않기 때문에 속도가 빠르다는 장점이 있다.
    </details>
 
-13. 3-way handshaking 과정을 설명하세요.
+15. 3-way handshaking 과정을 설명하세요.
 
    <details>
        <summary>답변보기</summary>
@@ -130,7 +155,7 @@
       3. 클라이언트는 서버의 응답은 ACK와 SYN 패킷을 받고, ACK를 서버로 보냄
    </details>   
 
-14. TCP통신 종료시에도 3-way handshaking을 사용하는가? 아니면 어떤 과정을 거치며 그 과정을 설명하세요.
+16. TCP통신 종료시에도 3-way handshaking을 사용하는가? 아니면 어떤 과정을 거치며 그 과정을 설명하세요.
   
    <details>
        <summary>답변보기</summary>
@@ -140,117 +165,47 @@
       3. 데이터를 모두 보냈다면, 연결이 종료되었다는 FIN 플래그를 클라이언트에게 보낸다.<br>
       4. 클라이언트는 FIN을 받고, 확인했다는 ACK를 서버에게 보낸다. (아직 서버로부터 받지 못한 데이터가 있을 수 있으므로 TIME_WAIT을 통해 기다린다.)
    </details>
-   
-## 박세정
 
 
-1. osi 7계층이란? 
+17. 3-way handshaking 과정에서 클라이언트 입장과 서버 입장에서 주고 받는데, 2-way handshaking 과정으로 충분한 것이 아닌지?
 
    <details>
        <summary>답변보기</summary>
-       OSI 7계층은 네트워크에서 통신이 일어나는 과정을 7단계로 나눈 것을 말한다. 이는 국제표준규격으로, 동일한 규격을 갖게 해 원할한 통신이 가능하게 했다.
+       
+       두 번의 전송으로 연결이 완료된 것 같지만, 이 과정은 클라이언트 입장에서 서버에게 패킷을 보내고 받을 수 있다는 확인밖에 할 수 없다.
+       서버 입장에서는 클라이언트에게 패킷을 전송한 것이 잘 도착했는 지 알 수 없기 때문에 3-way handshaking 과정이 필요하다.
+       서버도 클라이언트에게 SYN을 보내고, ACK를 받음으로써 완벽한 연결의 확인을 하는 과정이 있어야 한다. 
+
    </details>
 
-2. 계층을 나눈 이유?
+18. TCP의 연결설정 과정(3단계)와 연결 종료 과정(4단계)이 차이나는 이유?
 
    <details>
        <summary>답변보기</summary>
-       통신이 일어나는 과정을 단계별로 알 수 있고, 특정한 곳에 이상이 생기면 그 단계만 수정할 수 있기 때문이다.
+       
+       Client가 데이터 전송을 마쳤다고 하더라도 서버는 아직 보낼 데이터가 남아있을 수 있기 때문에 일단 FIN에 대한 ACK만 보내고, 데이터를 모두 전송한 후에 자신도 FIN에 대한 메시지를 보내기 때문이다.
+
    </details>
 
-3. osi계층 이름 말하기
-
-   <details>
-       <summary>답변보기</summary>물리계층
-       <br>데이터 링크 계층<br>네트워크 계층<br>전송계층<br>세션 계층<br>표현계층<br>응용계층
-   </details>
-
-4. 네트워크 레이어의 역할
+19. 만약 서버에서 FIN 플래그를 전송하기 전에 전송한 패킷이 라우팅 지연이나 패킷 유실로 인한 재전송 등으로 인해 FIN 패킷보다 늦게 도착하는 상황이 발생하면 어떻게 될까?
 
    <details>
        <summary>답변보기</summary>
-       데이터를 목적지까지 가장 안전하고 빠르게 전달하는 기능을 담당한다.
-   
-   라우터를 통해 이동할 경로를 선택하여 IP 주소를 지정하고, 해당 경로에 따라 패킷을 전달해준다.
-   
-   라우팅, 흐름 제어, 오류 제어, 세그먼테이션 등을 수행한다.
+       
+       이런 현상에 대비하여, 클라이언트는 서버로부터 FIN 플래그를 수신하더라도 일정 시간(DEFAULT 240sec)동안 세션을 남겨두고 잉여 패킷을 기다리는 과정을 거친다
+       (TIME_WAIT 과정)
    </details>
 
-5. 데이터 링크 레이어와 트렌스포트 레이어 모두 오류제어기능을 제공한다. 두 오류제어 기능의 차이는?
+20. 초기 Sequence Number인 ISN을 0부터 시작하지 않고, 난수를 생성해서 설정하는 이유?
 
    <details>
        <summary>답변보기</summary>
-       데이터 링크 계층에서는 오류가 난 프레임을 버려버리는 방식이지만, 트랜스포트계층의 오류제어는 오류가 생기면 재발송함으로써 오류복구까지 해준다.
+       
+       Connection을 맺을 때 사용하는 포트(Port)는 유한 범위 내에서 사용하고, 시간이 지남에 따라 재사용된다.
+       따라서 두 통신 호스트가 과거에 사용된 포트 번호 쌍을 사용하는 가능성이 존재한다.
+       서버 측에서는 패킷의 SYN을 보고, 패킷을 구분ㅅ하게 되는데, 난수가 아닌 순차적인 Number가 전송된다면, 이전의 Connection으로부터 오는 패킷으로 인식할 수 있다.
+       이런 문제가 발생할 가능성을 줄이기 위해서 난수로 ISN을 설정한다.
    </details>
-
-6. 데이터 링크 레이어와 네트워크 레이어의 차이점?
-
-   <details>
-       <summary>답변보기</summary>
-       네트워크 계층은 서로 다른 두 네트워크간의 전송을 담당한다면, 데이터 링크 계층은 동일한 네트워크 내에서 전송을 담당한다.
-   </details>
-
-7. 트랜스포트 레이어의 프로토콜? 
-
-   <details>
-       <summary>답변보기</summary>
-       TCP, UDP 가 해당한다.
-   </details>
-
-8. http를 제외한 프로토콜?
-
-   <details>
-       <summary>답변보기</summary>
-   FTP, SMTP, POP3, IMAP, Telnet, DNS 등과 같은 프로토콜이 있다.
-   </details>
-
-9. 각 Layer는 패킷을 어떻게 명칭하나요?  예를 들어, Transport Layer의 경우 Segment라 부릅니다.
-
-   <details>
-       <summary>답변보기</summary>
-       데이터링크 계층 - 프레임<br>
-   네트워크 계층 - 패킷<br>
-   전송계층 - 세그먼트
-   </details>
-
-10. 맥주소란?
-
-    <details>
-        <summary>답변보기</summary>
-        Mac 주소란 컴퓨터 간 데이터를 전송하기 위해 있는 컴퓨터의 물리적 주소 또는 하드웨어 주소라고 한다.
-    </details>
-
-11. 맥주소와 ip주소의 차이
-
-    <details>
-        <summary>답변보기</summary>
-        MAC 주소는 IP주소와 마찬가지로 네트워크 통신에서 통신기기의 식별번호를 나타내는 것이다. <br>
-    IP주소와의 차이점은, IP주소는 임시적으로 다른 주체에 의해 할당 되는 것이지만,
-    MAC 주소는 통신기기의 하드웨어 자체에 부여된 고유한 식별번호를 나타낸다.<br>
-    이 IP주소는 통신기기마다 고유하게 할당되어 있는 것이 아니라, 대부분 통신사에 일정 금액을 지불하고 받아오는 것이기 때문에 경우에 따라 바뀔 수 있다. 
-    </details>
-
-12. ARP?
-
-    <details>
-        <summary>답변보기</summary>
-        논리적인 주소 (IP Address)를 물리적인 주소 (MAC Address)로 변환하는 작업
-    </details>
-
-13. osi계층에서 데이터를 수신할때의 흐름
-
-    <details>
-        <summary>답변보기</summary>
-         1. physical layer 에서 전기적인 데이터를 수신한다.
-         2. Data-Link layer에서 프레임에 부여한 주소(MAC)를 해석하고, 에러/재전송/흐름제어 등을 체크한다.<br>
-         3. network latyer에서는 전송받은 목적지 IP주소가 맞는지를 체크한다. 또한 데이터가 너무 빨리 전송되었거나 수신되지 않도록 흐름을 제어한다.<br>
-         4. Transport layer에서 전달받은 포트 번호를 통해 어느 어플리케이션에 데이터를 전달해야하는지를 체크하거나, 데이터가 올바른 순서로 수신되었는지 확인 한다.<br>
-         5. Session layer에서는 장치간의 연결 세션을 설정하고 시간초과, 오류등을 체크한다.<br>
-         6. Presentation layer에서는 데이터를 애플리케이션 계층에 전달하기 위해 암호화 된 데이터를 해석하거나, 압축한 데이터를 압축해제하는 등 데이터를 해석하는 역할을 수행한다.<br>
-         7. Application Layer에서 해당 프로토콜의 종류를 해석하고 해당 프로토콜에 맞는 해석방법을 통해 데이터를 해석하거나, 인증 및 권한 부여 문제도 해결한다.</details>
-    </details>
-
-
 
 
 
@@ -263,3 +218,6 @@ PCB & Context switching : https://meadow-butter-70e.notion.site/PCB-Context-Swit
 IPC : https://meadow-butter-70e.notion.site/IPC-4232bd00eb7c4b1cbb4b0a8ba397a373
 <br><br>
 [TCP] 3 way handshaking & 4 way handshaking : https://meadow-butter-70e.notion.site/TCP-3-way-handshake-4-way-handshake-ab9ae704495941bd83983f5b78008ed1
+
+
+박세정 : https://evening-november-9ec.notion.site/4-4a1d8abdfea04b82ac547e274fdc8a4e
