[02.06] 4,5주차 정리한 부분 추가

--- a/4주차.md
+++ b/4주차.md
@@ -1,7 +1,7 @@
 
 1. Context switching이 무엇인지 설명하세요 <br> 
-  -> 언제 발생하는가? <br> 
-  -> PCB란 무엇이고, 어떤 방식으로 관리되는가?
+    -> 언제 발생하는가? <br> 
+    -> PCB란 무엇이고, 어떤 방식으로 관리되는가?
 
    <details>
        <summary>답변보기</summary>
@@ -43,8 +43,9 @@
        캐시 오염 <br>
    
        <https://youtu.be/Xh9Nt7y07FE>
+   
    </details>
-
+   
 4. Interrupt 과정을 PCB와 함께 설명하시오.
 
    <details>
@@ -124,7 +125,7 @@
        웹 소켓은 TCP 소켓과 구분되는 것이 아니라 소켓의 추상화된 형태이다.
       https://gusrb3164.github.io/web/2021/10/28/websocket-socket/
    </details>
-   
+
 13. Http vs 소켓
 
    <details>
@@ -156,7 +157,7 @@
    </details>   
 
 16. TCP통신 종료시에도 3-way handshaking을 사용하는가? 아니면 어떤 과정을 거치며 그 과정을 설명하세요.
-  
+
    <details>
        <summary>답변보기</summary>
        4-way handshaking을 사용한다. 4-way handshaking은 다음 과정을 거친다. <br><br>
@@ -171,7 +172,7 @@
 
    <details>
        <summary>답변보기</summary>
-       
+
        두 번의 전송으로 연결이 완료된 것 같지만, 이 과정은 클라이언트 입장에서 서버에게 패킷을 보내고 받을 수 있다는 확인밖에 할 수 없다.
        서버 입장에서는 클라이언트에게 패킷을 전송한 것이 잘 도착했는 지 알 수 없기 때문에 3-way handshaking 과정이 필요하다.
        서버도 클라이언트에게 SYN을 보내고, ACK를 받음으로써 완벽한 연결의 확인을 하는 과정이 있어야 한다. 
@@ -182,7 +183,7 @@
 
    <details>
        <summary>답변보기</summary>
-       
+
        Client가 데이터 전송을 마쳤다고 하더라도 서버는 아직 보낼 데이터가 남아있을 수 있기 때문에 일단 FIN에 대한 ACK만 보내고, 데이터를 모두 전송한 후에 자신도 FIN에 대한 메시지를 보내기 때문이다.
 
    </details>
@@ -191,7 +192,7 @@
 
    <details>
        <summary>답변보기</summary>
-       
+
        이런 현상에 대비하여, 클라이언트는 서버로부터 FIN 플래그를 수신하더라도 일정 시간(DEFAULT 240sec)동안 세션을 남겨두고 잉여 패킷을 기다리는 과정을 거친다
        (TIME_WAIT 과정)
    </details>
@@ -200,7 +201,7 @@
 
    <details>
        <summary>답변보기</summary>
-       
+
        Connection을 맺을 때 사용하는 포트(Port)는 유한 범위 내에서 사용하고, 시간이 지남에 따라 재사용된다.
        따라서 두 통신 호스트가 과거에 사용된 포트 번호 쌍을 사용하는 가능성이 존재한다.
        서버 측에서는 패킷의 SYN을 보고, 패킷을 구분ㅅ하게 되는데, 난수가 아닌 순차적인 Number가 전송된다면, 이전의 Connection으로부터 오는 패킷으로 인식할 수 있다.
@@ -223,3 +224,7 @@ IPC : https://meadow-butter-70e.notion.site/IPC-4232bd00eb7c4b1cbb4b0a8ba397a373
 박세정 : https://evening-november-9ec.notion.site/4-4a1d8abdfea04b82ac547e274fdc8a4e
 <br>
 김준엽 : https://spot-visitor-fff.notion.site/Week4-Context-Switching-TCP-203e8b43e188471dbc018e86277c9351
+
+<br>
+
+수민 : https://sustco.tistory.com/35 비밀번호 : 1234
